2011-01-27  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #332621
	* src/org/eclipse/linuxtools/changelog/core/editors/GNUHyperlinkDetector.java (getDocumentLocation): 
	Use the location of the ChangeLog directly rather than calculating from the workspace-root.

2010-12-06  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Bump up version to 2.7.0 for 0.7 release.

2010-12-06  Severin Gehwolf  <sgehwolf@redhat.com>

	* META-INF/MANIFEST.MF: Add "Eclipse-ExtensibleAPI: true" header,
	since fragments export new packages.

2010-12-01  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #331243
	* plugin.xml: Add enablement for subclipse as well for Prepare ChangeLog.

2010-11-29  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #331243
	* plugin.xml: Add enablement options for Prepare ChangeLog under Project menu so that
	project must have been checked out of CVS or SVN.

2010-11-26  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #331244
	* src/org/eclipse/linuxtools/changelog/core/formatters/GNUFormat.java (mergeChangelog): Add
	defaultContent for last entry which may contain "New file" or "Removed file".

2010-10-28  Alexander Kurtakov  <akurtako@redhat.com>

	* META-INF/MANIFEST.MF: Remove LazyStart obsoleted by ActivationPolicy.
	* src/org/eclipse/linuxtools/changelog/core/editors/GNUEditorConfiguration.java: Remove now unneeded field.

2010-10-28  Alexander Kurtakov  <akurtako@redhat.com>

	* src/org/eclipse/linuxtools/changelog/core/editors/GNUEditorConfiguration.java (getHyperlinkPresenter): Remove. We need MultipleHyperlinkPresenter to show mylyn bug links properly.
	(getHyperlinkDetectorTargets): Register DefaultTextEditor as target.

2010-10-18  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/changelog/core/actions/PrepareChangeLogAction.java (guessFunctionNames): 
	Add check for out-of-range using appropriate document boundaries depending on whether the change is
	marked as being to the local file or remote file in repository.
