@@ -189,16 +189,6 @@
              id="org.eclipse.linuxtools.changelog.keyscheme.default"
              name="default"/>
        <key
-             commandId="org.eclipse.linuxtools.changelog.core.preparechangelog2"
-             contextId="org.eclipse.ui.textEditorScope"
-             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-             sequence="Ctrl+Alt+P" />
-       <key
-             commandId="org.eclipse.linuxtools.changelog.core.preparechangelog2"
-             contextId="org.eclipse.compare.compareEditorScope"
-             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-             sequence="Ctrl+Alt+P"/>
-       <key
              commandId="org.eclipse.linuxtools.changelog.core.preparechangelog"
              contextId="org.eclipse.ui.contexts.window"
              schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
